--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body,html{
 	padding: 0;
 	font-size: 100%;
 	font-family: quicksand,sans-serif;
+	scroll-behavior: smooth;
 }
 
 p{
@@ -58,10 +59,13 @@ a {
 	right: 0%;
 	background-color: white;
 	position: fixed;
+	top: -70px;
 	display: block;
-	box-shadow: 2px 1px #aaaaaa;
-	/**z-index: 1;**/
+	transition: top 0.4s;
+	box-shadow: 2px 2px 5px #aaaaaa;
+	z-index: 1;
 }
+
 .nav-item:first-child{
 	float: left;
 	font-weight: 500;
@@ -83,6 +87,15 @@ a {
 #portfolio-photo {
 	width: 500px;
 	height: 500px;
+}
+
+#home-section {
+	height: 100vh;
+	display: flex; 
+	align-items: center; 
+	justify-content: center;
+	flex-wrap: wrap;
+	align-content: center;
 }
 
 /**#home-section{
@@ -129,24 +142,33 @@ a {
 #education-section {
 	padding:50px;
 	padding-bottom: 80px;
-	min-height:90vh;
+	min-height:100vh;
 	background-color: #474d5a;
 }
 
-#text{
-	font-family: quicksand, sans-serif;
-	color: white;
-}
-#coursework {
-	align-items: flex-start;
-	font-size: 120%;
+#education-section * {
+	color:white;
 }
 
 #school {
 	align-items: flex-start;
 }
 
-h2{
+#school * {
+	margin: 8px;
+}
+
+#coursework {
+	align-items: flex-start;
+	font-size: 120%;
+}
+
+#text {
+	font-family: quicksand, sans-serif;
+	color: white;
+}
+
+h2{ 
 	font-size: 200%;
 }
 
@@ -166,7 +188,7 @@ h5,h6{
 }
 
 li {
-	font-size: 90%;
+	/*font-size: 90%;*/
 	margin: 5px;
 }
 
