--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,6 +1,6 @@
 :root {
     --white: #FFFFFF;
-    --navy: #0e0725;
+    --navy: #02010a;
     --teal: #64CCC5;
     --dark-teal: #176B87;
     --mint: #DAFFFB;
