--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,54 @@
-/* * {
-   display: block;
-   position: relative;
-   visibility: hidden;
+* {
+    font-family: 'Varela Round', sans-serif;
+}
+
+/* .banner {
+    margin-top: 0;
+    padding: 260px 0 100px 0;
+}
+
+.centered {
+    display: flex;
+    justify-self: center;
+    align-items: center;
 } */
+
+.row {
+    margin-top: 300px;
+    /* padding: 20px 0 100px 0; */
+}
+
+/* .leftside, .rightside {
+    height: 100vh;
+    width: 50%;
+} */
+
+/* .leftside {
+    float: left;
+}
+
+.rightside {
+    float: right;
+} */
+
+.rightside {
+    height: 100vh;
+    width: 50%;
+    float: right;
+}
+
+.rightside h1 {
+    font-weight: 700px;
+    font-size: 45px;
+    letter-spacing: 1px;
+    line-height: 1;
+    margin-bottom: 20px;
+    display: block;
+}
+
+.rightside p {
+    font-size: 20px;
+    letter-spacing: 1px;
+    display: flex;
+    align-items: center;
+}
