--- a/src/styles/Earth.css
+++ b/src/styles/Earth.css
@@ -4,11 +4,11 @@
 } */
 
 #globeViz {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 50vw;
-    height: 100vh;
+    position: absolute;
+    top: -100px;
+    left: 15.0%;
+    width: 25vw;
+    height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
