--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -32,12 +32,15 @@
 } */
 
 .rightside {
+    position: relative;
     height: 100vh;
     width: 50%;
     float: right;
 }
 
 .rightside h1 {
+    position: relative;
+    z-index: 100;
     font-weight: 700px;
     font-size: 45px;
     letter-spacing: 1px;
@@ -47,6 +50,9 @@
 }
 
 .rightside p {
+    position: relative;
+    z-index: 100;
+    z-index: 100;
     font-size: 20px;
     letter-spacing: 1px;
     display: flex;
