--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,6 +1,6 @@
 * {
     position: relative;
-    z-index: 100;
+    z-index: 3;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,6 +13,8 @@
 }
 
 nav {
+    position: relative;
+    z-index: 100;
     display: flex;
     align-items: center;
     justify-content: space-between;
