--- a/src/components/home/Earth.css
+++ b/src/components/home/Earth.css
@@ -17,18 +17,18 @@
 
     z-index: 1;
     position: absolute;
-    top: -100px;
-    left: 15.0%;
+    /* top: -100px; */
+    left: 12.0%;
     width: 25vw;
     height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 80px;
+    /* margin-top: 80px; */
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1280px) {
     #globeViz {
         z-index: 1;
         position: absolute;
