--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,8 +1,14 @@
 :root {
     --white: #FFFFFF;
-    --navy: #02010a;
+    --navy: #000010;
+    --black: #000000;
     --teal: #64CCC5;
     --dark-teal: #176B87;
     --mint: #DAFFFB;
     --light-slate: #a8b2d1;
+    --lightest-slate: #ccd6f6;
+    --gif-background: #0e0e0e;
+
+    --card-height: 200px;
+    --card-width: 200px;
 }
