--- a/src/components/research/Research.css
+++ b/src/components/research/Research.css
@@ -1,5 +1,8 @@
 #research {
     background-color: var(--navy);
+    padding-left: 5%;
+    padding-right: 5%;
+    min-height: 60vh;
 }
 
 #research h1 {
@@ -8,28 +11,64 @@
     padding-top: 2%;
 }
 
-.cards-body {
-    background-color: var(--navy);
-    margin: 0px;
-}
-
 .cards {
     background-color: var(--navy);
-    margin: 0px;
+    /* padding-left: 45px; */
 }
 
-.card {
-    background-color: var(--navy);
+/* .card-container {
+    width: 200px;
+    height: 40vh;
+    align-items: center;
+    justify-content: center;
+} */
+
+/* here */
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  grid-gap: 10px;
 }
+@media (max-width: 1080px) {
+  .projects-grid {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+}
+
+.projects-card {
+    position: relative;
+    cursor: default;
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    position: relative;
+    height: 100%;
+    padding: 1rem 1.75rem;
+    background-color: var(--navy);
+    border-radius: 8px;
+    align-items: center;
+}
+
+.projects-card h5 {
+    font-family: 'Varela Round', sans-serif;
+    color: var(--light-slate);
+    font-size: 1.2rem;
+    margin: 0;
+    padding-top: 20px;
+}
+
 
 #image {
-    /* height: 10%;
-    width: 10%; */
-    border-radius: 10px;
-    /* border-color: #0e0e0e;
-    border-width: 10px;
-    border-style: solid; */
+    border-radius: 8px;
+    width: 200px;
+    height: 200px;
 }
+
+#image:hover {
+  color: rgb(88 199 250 / 100%);
+  transition: color 1s;
+}
+
 
 @property --rotate {
   syntax: "<angle>";
@@ -46,27 +85,21 @@
   }
 }
 
-#image:hover {
-  color: rgb(88 199 250 / 100%);
-  transition: color 1s;
-}
-
-
 .card {
+    background-color: transparent !important;
+
     width: 200px;
     height: 200px;
-    margin: 0px;
-    /* padding: 3px; */
-    /* position: relative; */
-    /* border-radius: 50px; */
-    /* justify-content: center;
-    align-items: center;
-    text-align: center; */
-    display: flex;
-    /* font-size: 1.5em; */
     color: rgb(88 199 250 / 0%);
     cursor: pointer;
-    /* font-family: cursive; */
+    position: relative;
+    display: relative;
+
+    justify-content: center;
+    align-items: center;
+
+    padding: 3px;
+    border-radius: 50px;
 }
 
 a {
@@ -79,27 +112,6 @@ a {
     color: rgb(88 199 250 / 100%);
     transition: color 1s;
 }
-/* .card:hover:before, .card:hover:after {
-  animation: none;
-  opacity: 0;
-} */
-
-/* .card::before,
-.card::after {
-  content: "";
-  width: 104%;
-  height: 102%;
-  border-radius: 8px;
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
-    position: absolute;
-    z-index: -1;
-    top: -1%;
-    left: -2%;
-    animation: spin 2.5s linear infinite;
-} */
-
 
 .card:hover::before {
     content: "";
@@ -125,7 +137,6 @@ a {
     z-index: -1;
     height: 100%;
     width: 100%;
-    /* margin: 0 auto; */
     transform: scale(0.8);
     filter: blur(calc(var(--card-height) / 6));
     background-image: linear-gradient(
