--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -3,17 +3,18 @@
 }
 
 #row {
-    margin-top: 200px;
+    /* margin-top: 200px; */
     /* padding: 20px 0 100px 0; */
 }
 
 #rightside {
-    height: 50vh;
+    height: 100vh;
     width: 50%;
     float: right;
-    padding-top: 80px;
+    padding-top: 280px;
     padding-right: 30px;
     position: relative;
+    background-color: var(--navy);
 }
 
 #rightside h1 {
