--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -8,13 +8,15 @@
 }
 
 #rightside {
+    z-index: 2;
     height: 100vh;
-    width: 50%;
+    width: 45%;
     float: right;
     padding-top: 280px;
     padding-right: 30px;
     position: relative;
-    background-color: var(--navy);
+    /* background-color: var(--navy); */
+    background-color: transparent;
 }
 
 #rightside h1 {
@@ -45,6 +47,7 @@
         float: none;
         margin-left: 25%;
         margin-top: -150px;
+        background-color: transparent;
     }
 
     #rightside h1 {
@@ -74,6 +77,7 @@
         float: none;
         margin-left: 25%;
         margin-top: -200px;
+        background-color: transparent;
     }
 
     #rightside h1 {
