--- a/src/components/publications/SimpleTab.css
+++ b/src/components/publications/SimpleTab.css
@@ -8,7 +8,6 @@
   background-color: var(--navy);
   padding-left: 5%;
   padding-right: 5%;
-  /* padding-top: 1%; */
 }
 
 .tabs {
@@ -34,7 +33,8 @@
 .tab-item {
   min-width: 80px;
   padding: 16px 20px 11px 20px;
-  font-size: 18px;
+  /* font-size: 22px; */
+  font-size: 1.2rem;
   text-align: center;
   color: var(--teal);
   background-color: var(--navy);
@@ -74,8 +74,9 @@
 .tab-desc li {
   position: relative;
   padding-left: 30px;
-  /* padding-bottom: 2px; */
-  font-size: 16px;
+  padding-bottom: 10px;
+  /* font-size: 19px; */
+  font-size: 1.2rem;
   color: var(--light-slate);
 }
 
