--- a/src/components/research/Research.css
+++ b/src/components/research/Research.css
@@ -2,19 +2,16 @@
     background-color: var(--navy);
     padding-left: 5%;
     padding-right: 5%;
-    min-height: 60vh;
+    min-height: 100vh;
 }
 
 #research h1 {
     font-family: 'Varela Round', sans-serif;
     color: var(--teal);
-    padding-top: 2%;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
-.cards {
-    background-color: var(--navy);
-    /* padding-left: 45px; */
-}
 
 /* here */
 .projects-grid {
@@ -22,9 +19,9 @@
   grid-template-columns: repeat(2, minmax(200px, 1fr));
   grid-gap: 10px;
 }
-@media (max-width: 1080px) {
+@media (max-width: 700px) {
   .projects-grid {
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(1, minmax(150px, 1fr));
   }
 }
 
@@ -37,7 +34,7 @@
     position: relative;
     height: 100%;
     padding: 1rem 1.75rem;
-    background-color: var(--navy);
+    /* background-color: var(--navy); */
     border-radius: 8px;
     align-items: center;
 }
@@ -81,22 +78,22 @@
 .card {
     background-color: transparent !important;
 
-    width: 200px;
-    height: 200px;
+    width: 205px;
+    height: 205px;
     color: rgb(88 199 250 / 0%);
     cursor: pointer;
-    position: relative;
-    display: relative;
+    /* position: relative; */
+    /* display: relative; */
 
     justify-content: center;
     align-items: center;
 
-    padding: 3px;
+    padding: 2px;
     border-radius: 50px;
 }
 
 a {
-    background-color: var(--gif-background);
+    /* background-color: var(--gif-background); */
     margin: 0px;
     /* border-radius: 30px; */
 }
@@ -115,7 +112,7 @@ a {
         var(--rotate)
         , #5ddcff, #3c67e3 43%, #4e00c2);
     position: absolute;
-    z-index: -1;
+    /* z-index: -1; */
     top: -1%;
     left: -2%;
     animation: spin 2.5s linear infinite;
@@ -127,7 +124,7 @@ a {
     top: calc(var(--card-height) / 6);
     left: 0;
     right: 0;
-    z-index: -1;
+    /* z-index: -1; */
     height: 100%;
     width: 100%;
     transform: scale(0.8);
