--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -11,7 +11,7 @@
 
 #courses h1 {
   color: var(--teal);
-  padding-top: 80px;
+  padding-top: 100px;
   padding-bottom: 40px;
   text-align: center;
 }
@@ -20,7 +20,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
-  margin: 4rem 5vw;
+  margin: 0 5vw;
   padding: 0;
   list-style-type: none;
 }
@@ -47,7 +47,7 @@
   right: 0;
   z-index: 2;
   border-radius: calc(var(--curve) * 1px);
-  background-color: var(--lightest-navy);
+  background-color: var(--card-color);
   transform: translateY(100%);
   transition: .2s ease-in-out;
 }
@@ -64,7 +64,7 @@
     gap: 2em;
     padding: 2em;
     border-radius: calc(var(--curve) * 1px) 0 0 0;
-    background-color: var(--lightest-navy);
+    background-color: var(--card-color);
     transform: translateY(-100%);
     transition: .2s ease-in-out;
     min-height: 165px;
@@ -80,7 +80,7 @@
 }
 
 .card__arc path {
-  fill: var(--lightest-navy);
+  fill: var(--card-color);
   d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
 }
 
@@ -96,7 +96,7 @@
 
 .card__status {
   font-size: 1.0em;
-  color: var(--slate);
+  color: var(--light-navy);
 }
 
 .card__description {
@@ -111,5 +111,5 @@
 }
 
 .card__description a {
-  color: var(--teal);
+  color: var(--light-navy);
 }
