--- a/src/components/news/Awards.css
+++ b/src/components/news/Awards.css
@@ -1,28 +1,22 @@
+#awards {
+    min-height: 100vh;
+}
+
+#awards h1 {
+    font-family: 'Varela Round', sans-serif;
+    color: var(--teal);
+    padding-top: 100px;
+}
+
 .awards-container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: -20px;
-  margin-bottom: 20px; */
     flex: 1;
-    padding-right: 20px;
+    margin-right: 50px;
+    margin-left: 80px;
 }
 
 .award-card {
-    /* position: relative;
-    width: 80%;
-    height: 200px;
-    margin: 20px;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    border: 2px solid #ccc;
-    transition: border-color 0.3s; */
     position: relative;
     width: 100%;
-    margin-bottom: 20px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -48,3 +42,15 @@
   transform: scale(1.05);
 }
 
+@media screen and (max-width: 400px) {
+  .award-card h2 {
+    color: var(--teal);
+    font-size: 1.0rem;
+    padding-bottom: 10px;
+  }
+
+  .award-card p {
+    color: var(--slate);
+    font-size: 0.8rem;
+  }
+}
