--- a/src/components/publications/SimpleTab.css
+++ b/src/components/publications/SimpleTab.css
@@ -88,3 +88,32 @@
   position: absolute;
   left: 0;
 }
+
+@media screen and (max-width: 400px) {
+  .tab-item {
+    min-width: 80px;
+    padding: 16px 20px 11px 20px;
+    /* font-size: 22px; */
+    font-size: 0.6rem;
+    font-style: bold;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--teal);
+    background-color: var(--background-color);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom: 5px solid transparent;
+    opacity: 0.6;
+    cursor: pointer;
+    transition: all 0.5s ease;
+  }
+
+  .tab-desc li {
+    position: relative;
+    padding-left: 30px;
+    padding-bottom: 10px;
+    /* font-size: 19px; */
+    font-size: 0.5rem;
+    color: var(--light-slate);
+  }
+}
