--- a/src/components/team/Team.css
+++ b/src/components/team/Team.css
@@ -10,18 +10,10 @@
 }
 
 .team-container {
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px; */
-
     display: grid;
     grid-template-columns: repeat(3, minmax(300px, 1fr));
     gap: 1rem;
     margin-left: 10vw;
-    /* margin: 4rem 5vw;
-    padding: 0;
-    list-style-type: none; */
 }
 
 @media (max-width: 1000px) {
@@ -45,26 +37,19 @@
   border-radius: 20px;
   padding: 20px;
   position: relative; 
-
-  /* display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  margin: 4rem 5vw;
-  padding: 0;
-  list-style-type: none; */
 }
 
-.member-card:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); /* Add a box shadow on hover */
-  filter: brightness(1.1); /* Increase brightness on hover */
-}
+/* .member-card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); 
+  filter: brightness(1.2); 
+} */
 
 .member-info {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  transition: transform 0.3s; /* Add transition for smooth animation */
+  transition: transform 0.3s; 
 }
 
 
@@ -93,8 +78,8 @@
 }
 
 .hover-icons a {
-  color: var(--lightest-slate);
-  background-color: #333;
+  color: var(--card-icon);
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -105,7 +90,8 @@
 }
 
 .hover-icons a:hover {
-  background-color: #555;
+  background-color: var(--card-icon);
+  color: white;
 }
 
 .member-card:hover .hover-icons {
