--- a/src/components/news/Awards.css
+++ b/src/components/news/Awards.css
@@ -1,6 +1,6 @@
-#awards {
+/* #awards {
     min-height: 100vh;
-}
+} */
 
 #awards h1 {
     font-family: 'Varela Round', sans-serif;
@@ -21,13 +21,14 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: left;
-    border: 2px solid #ccc;
+    border: 2px solid var(--teal);
     transition: transform 0.3s, border-color 0.3s;
     cursor: pointer;
+    background-color: var(--teal);
 }
 
 .award-card h2 {
-    color: var(--teal);
+    color: var(--mint);
     font-size: 1.8rem;
     padding-bottom: 10px;
 }
@@ -44,7 +45,7 @@
 
 @media screen and (max-width: 400px) {
   .award-card h2 {
-    color: var(--teal);
+    color: var(--mint);
     font-size: 1.0rem;
     padding-bottom: 10px;
   }
