--- a/src/components/publications/Publications.css
+++ b/src/components/publications/Publications.css
@@ -6,7 +6,7 @@
     font-family: 'Varela Round', sans-serif;
     color: var(--teal);
     padding-top: 100px;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
 }
 
 
