--- a/src/components/news/Awards.css
+++ b/src/components/news/Awards.css
@@ -15,6 +15,7 @@
 }
 
 .award-card {
+    margin-top: -25px;
     position: relative;
     width: 100%;
     padding: 20px;
@@ -30,7 +31,7 @@
 .award-card h2 {
     color: var(--mint);
     font-size: 1.8rem;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .award-card p {
