--- a/src/components/research/Research.css
+++ b/src/components/research/Research.css
@@ -9,7 +9,7 @@
     font-family: 'Varela Round', sans-serif;
     color: var(--teal);
     padding-top: 100px;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
 }
 
 
