--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -5,8 +5,8 @@
 
 #contact h1 {
   color: var(--teal);
-  padding-top: 100px;
-  /* padding-bottom: 40px; */
+  padding-top: 80px;
+  padding-bottom: 10px;
   text-align: center;
 }
 
