--- a/src/components/research/Research.css
+++ b/src/components/research/Research.css
@@ -8,8 +8,8 @@
 #research h1 {
     font-family: 'Varela Round', sans-serif;
     color: var(--teal);
-    padding-top: 100px;
-    /* padding-bottom: 40px; */
+    padding-top: 80px;
+    padding-bottom: 10px;
 }
 
 
