--- a/src/components/news/News.css
+++ b/src/components/news/News.css
@@ -1,4 +1,4 @@
-#news {
+/* #news {
     min-height: 100vh;
 }
 
@@ -27,7 +27,6 @@
   flex: 1;
 }
 
-/* The device with borders */
 .smartphone {
   position: relative;
   width: 374px;
@@ -40,7 +39,7 @@
   margin-top: -20px;
 }
 
-/* The horizontal line on the top of the device */
+
 .smartphone:before {
   content: '';
   display: block;
@@ -54,7 +53,6 @@
   border-radius: 10px;
 }
 
-/* The circle on the bottom of the device */
 .smartphone:after {
   content: '';
   display: block;
@@ -68,9 +66,8 @@
   border-radius: 50%;
 }
 
-/* The screen (or content) of the device */
 .smartphone .content {
   width: 342px;
   height: 608px;
   background: white;
-}
+} */
