--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,7 +12,7 @@
     justify-content: space-between; /* Divide the screen into two columns */
     align-items: center;
     padding: 20px 0 100px 0;
-    background-image: url("../../../public/assets/Chicago.jpeg"); /* Set the background image */
+    background-image: url("../../../public/assets/Chicago1.jpeg"); /* Set the background image */
     background-size: cover;
     background-position: center;
 }
