--- a/src/components/research/ResearchContent.css
+++ b/src/components/research/ResearchContent.css
@@ -3,6 +3,8 @@
   padding-bottom: 20px;
   padding-left: 30px;
   padding-right: 30px;
+
+  line-height: 2; /* Double spacing */
 }
 
 .content-box h3 {
@@ -33,12 +35,19 @@ h3 {
   align-items: center;
   margin-top: 20px;
   margin-bottom: 30px;
+
+  line-height: 2; /* Double spacing */
 }
 
 .content-desc img {
   width: 100px;
   height: 100px;
   margin-right: 20px;
+}
+
+.content-desc.large-image img {
+  width: 900px;
+  height: 900px;
 }
 
 .content-desc div {
