--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -16,6 +16,7 @@
     --lightest-slate: #777777;
 
     --card-color: #d3eae9;
+    --award-card: #15e4d6;
     --card-icon: #53a9a3;
     --gif-background: #0e0e0e;
 
