--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -79,15 +79,38 @@
   z-index: 2;
 }
 
-@media screen and (max-width: 900px) {
-  .card__arc {
-    display: none;
-  }
-}
-
 .card__arc path {
   fill: var(--card-color);
   d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+}
+
+@media screen and (max-width: 900px) {
+  .card__header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+    padding: 2em;
+    border-radius: calc(var(--curve) * 1px) calc(var(--curve) * 1px) 0 0;
+    background-color: var(--card-color);
+    transform: translateY(-100%);
+    transition: .2s ease-in-out;
+    min-height: 165px;
+  }
+  .card__arc {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: 99%;
+    right: 0;
+    z-index: 2;
+  }
+
+  .card__arc path {
+    fill: var(--card-color);
+    d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+  }
 }
 
 .courses-card:hover .card__header {
