--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -122,7 +122,7 @@
     }
 }
 
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 400px) {
     #leftside {
         width: 80%;
         padding-left: 30px;
@@ -157,4 +157,4 @@
         position: relative;
         background-color: transparent;
     }
-}
+} */
