--- a/src/components/home/NewsFeed.css
+++ b/src/components/home/NewsFeed.css
@@ -71,3 +71,55 @@
 .smartphone2 .content2::-webkit-scrollbar-thumb:hover {
   background-color: #555;
 }
+
+@media screen and (max-width: 900px) {
+  /* The device with borders */
+  .smartphone2 {
+    position: relative;
+    width: 250px;
+    height: 460px;
+    margin: auto;
+    border: 16px #373737 solid;
+    border-top-width: 40px;
+    border-bottom-width: 40px;
+    border-radius: 36px;
+    margin-top: 90px;
+  }
+
+  /* The horizontal line on the top of the device */
+  .smartphone2:before {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 5px;
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #565656;
+    border-radius: 10px;
+  }
+
+  /* The circle on the bottom of the device */
+  .smartphone2:after {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 50%;
+    bottom: -40px;
+    transform: translate(-50%, -50%);
+    background: #565656;
+    border-radius: 50%;
+  }
+
+  /* The screen (or content) of the device */
+  .smartphone2 .content2 {
+    width: 220px;
+    height: 380px;
+    background: white;
+    overflow-y: auto; /* Add overflow-y auto to make the content scrollable */
+    padding: 10px; /* Add some padding to the content for better appearance */
+  }
+}
