--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -25,7 +25,7 @@
     padding: 0 50px;
 } */
 
-#col {
+.col {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -77,11 +77,9 @@
         padding: 20px 0 50px 0;
     }
 
-    #row div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    .col {
         align-items: center;
+        justify-content: center;
     }
 
     /* #leftside {
@@ -114,7 +112,7 @@
     }
 
     #rightside {
-        margin-left: 20%;
+        margin-left: 25%;
         /* padding-top: 30%;
         padding-right: 100px;
         position: relative;
