--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -16,7 +16,8 @@
     --lightest-slate: #777777;
 
     --card-color: #d3eae9;
-    --award-card: #15e4d6;
+    --award-card: #0fd5ce;
+    --award-content: #b4d6d4;
     --card-icon: #53a9a3;
     --gif-background: #0e0e0e;
 
